# overflow

./: .dockerignore  .drone.yml  .gitignore  Dockerfile  Dockerfile.backend  Dockerfile.frontend  LICENSE  Makefile  README.md  deploy.sh  docker-compose.yml  docker-entrypoint.sh  nginx.conf  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  tsconfig.json  webpack.config.js
.github/actions/setup-docker/: action.yml
.github/workflows/: build-and-deploy.yml
backend/: .dockerignore  Dockerfile  Makefile  docker-entrypoint.sh  requirements-dev.txt  requirements.txt  setup.cfg
backend/src/: manage.py
backend/src/blog/: admin.py  models.py  serializers.py  urls.py  views.py
backend/src/blog/migrations/: 0001_initial.py  0003_auto_20190416_0942.py  0004_auto_20190416_1327.py  0005_delete_image.py
backend/src/overflow/: settings.py  urls.py
backend/src/overflow/settings/: __init__.py  base.py  drf.py  security.py
backend/src/user/: serializers.py  views.py
frontend/: .yarnrc  Dockerfile  Makefile  package.json  tsconfig.json  webpack.config.js
frontend/nginx/: nginx.conf
frontend/src/: app.html  app.scss  app.tsx  global.d.ts
frontend/src/components/: icons.tsx
frontend/src/components/404/: 404.scss  404.tsx
frontend/src/components/about/: about.scss  about.tsx
frontend/src/components/blog/: blog.tsx
frontend/src/components/button/: button.scss  button.tsx
frontend/src/components/footer/: footer.scss  footer.tsx
frontend/src/components/header/: header.scss  header.tsx
frontend/src/components/post/: filter.scss  filter.tsx  post.scss  post.tsx
frontend/src/lib/: markdown.ts  scroll.tsx  time.ts  utils.ts
frontend/src/lib/api/: api.ts  client.ts  models.ts
frontend/src/lib/scss/: colors.scss  layout.scss  reset.scss
src/: manage.py
src/about/: urls.py  views.py
src/about/templates/about/: index.html
src/blog/: admin.py  apps.py  feed.py  models.py  urls.py  views.py
src/blog/migrations/: 0001_initial.py  0002_auto_20190415_2123.py  0003_auto_20190416_0942.py  0004_auto_20190416_1327.py  0005_delete_image.py  0006_auto_20191207_0015.py  0007_auto_20191207_0039.py  0008_auto_20191207_0041.py  0009_auto_20191207_0044.py  0010_alter_image_id_alter_post_id_alter_tag_id.py  0011_post_raw_post_read_time.py
src/blog/scss/: filter.scss  post.scss
src/blog/templates/blog/: datetime_filter.html  detail.html  list.html  summary.html  tag_filter.html  tags.html
src/keyboard/: apps.py  models.py  urls.py  views.py
src/keyboard/static/keyboard/: keyboard.css  keyboard.js
src/lib/: __init__.py
src/lib/utils/: __init__.py  git.py
src/overflow/: asgi.py  context_processors.py  urls.py  views.py  wsgi.py
src/overflow/scss/: 404.scss  button.scss  colors.scss  footer.scss  header.scss  layout.scss  main.scss  messages.scss  nav.scss  sidebar.scss
src/overflow/settings/: __init__.py  base.py  logging.py  security.py
src/overflow/templates/: 400.html  403.html  404.html  500.html  about.html  base.html  index.html  nav.html  sidebar-box.html
src/overflow/tsx/: main.tsx
(+3 files in other folders)
