[project]
name = "overflow"
version = "7.1.2"
description = "overflow.no is the personal website of Aleksander Skraastad. I like programming, science & technology, gaming, cooking and the outdoors."
authors = ["Aleksander Skraastad <myth@overflow.no>"]
license = "MIT"
readme = "README.md"
package-mode = false
requires-python = ">=3.12"
dependencies = [
    "django-cors-headers>=4.6.0",
    "django-redis>=5.4.0",
    "django>=5.1.3",
    "markdown2>=2.5.1",
    "pillow>=11.0.0",
    "psycopg2-binary>=2.9.10",
    "pygments>=2.18.0",
    "python-decouple>=3.8",
    "uvicorn>=0.32.0",
]

[tool.django-stubs]
django_settings_module = "overflow.settings"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.ruff]
line-length=120
target-version = "py312"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.uv]
dev-dependencies = [
    "django-stubs[compatible-mypy]>=5.1.1",
    "mypy>=1.13.0",
    "ruff>=0.7.3",
]
